maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:6: warning: enclosing method bloque has result type Unit: return value discarded
    return t1&&t2
    ^WallFollowerMaze:12: error: value unary_! is not a member of Unit
      if (!bloque) {return}
          ^